# master-degree-portfolio

./: README.md
applied_cryptography/: README.md
autonomous_driving/: README.md
autonomous_driving/control_material/assignments/: .gitignore  README.md
autonomous_driving/control_material/assignments/assignment_1/: main.py
autonomous_driving/control_material/assignments/assignment_2/: main1.py  main2.py  main2_pp.py  main2_st.py  purepursuit.py  stanley.py
autonomous_driving/control_material/assignments/assignment_3/: cubic_spline_planner.py  frenet_optimal_trajectory.py  main_mpc.py  main_pp.py  main_st.py  pid.py  simulation.py  stanley.py
autonomous_driving/control_material/exercises/: sim_example.py
autonomous_driving/perception_material/assignments/assignment_1/: .gitignore  README.md
autonomous_driving/perception_material/assignments/assignment_3/3_assignment/src/particle/: CMakeLists.txt
autonomous_driving/perception_material/assignments/assignment_3/3_assignment/src/particle/src/: main.cpp  particle_filter.cpp
autonomous_driving/perception_material/exercises/2_kalman_filter/: ex_kalman_1D.py  ex_kalman_2D.py
distributed_systems/: README.md
distributed_systems/DTIP/: README.md  architecture.md  code_flow.md  dtip_complete_guide.md  exam_speech.md  professor_email_requirements.md  project_theory_study.md  theory_reference.md  uml_protocols.md
distributed_systems/DTIP/dtip_project/: .gitignore  README.md  compile.sh  shared_ledger.txt  test_sources.txt
general_computer_science_tutoring/: README.md
privacy_data_protection/: README.md
(+52 files in other folders)
